# agribot

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: hector_gazebo_plugins.pc  hector_gazebo_thermal_camera.pc  hector_gazebo_worlds.pc  robot_localization.pc  test.pc  tractor_controller.pc  tractor_description.pc  tractor_gazebo.pc  tractor_gps.pc
devel/lib/robot_localization/: ekf_localization_node  navsat_transform_node  robot_localization_listener_node  test_ros_robot_localization_listener_publisher  ukf_localization_node
devel/share/hector_gazebo_plugins/cmake/: hector_gazebo_pluginsConfig.cmake
devel/share/hector_gazebo_thermal_camera/cmake/: hector_gazebo_thermal_cameraConfig.cmake
devel/share/hector_gazebo_worlds/cmake/: hector_gazebo_worldsConfig.cmake
devel/share/robot_localization/cmake/: robot_localizationConfig.cmake
devel/share/test/cmake/: testConfig.cmake
devel/share/tractor_controller/cmake/: tractor_controllerConfig.cmake
devel/share/tractor_description/cmake/: tractor_descriptionConfig.cmake
devel/share/tractor_gazebo/cmake/: tractor_gazeboConfig.cmake
src/tractor/tractor_controller/: CMakeLists.txt  joint_steer_controller_plugin.xml  package.xml  tractor_controller_plugin.xml
src/tractor/tractor_controller/include/tractor_controller/: joint_steer_controller.h
src/tractor/tractor_controller/src/: MHE_1.py  MPC.py  camera_node.py  conect_device.py  extended_kalman_filter.py  joint_steer_controller.cpp  tractor_controller.py
src/tractor/tractor_gps/: CMakeLists.txt
(+8 files in other folders)
